@@ -1,3 +1,3 @@
-dl.portletTagcloud dd.portletItem a {
+dl.portletTagcloud dd.portletItem a, section.portletTagcloud section.portletContent a {
   line-height: 1em;
 }
