@@ -4,7 +4,6 @@ from ftw.tagging.behavior import ITagging
 from ftw.tagging.interfaces.tagging import ITagRoot
 from ftw.tagging.utils import getInterfaceRoot
 from plone.app.layout.viewlets.common import ViewletBase
-from plone.dexterity.interfaces import IDexterityContent
 
 
 class TagListViewlet(ViewletBase):
@@ -13,11 +12,8 @@ class TagListViewlet(ViewletBase):
     def update(self):
         context = aq_inner(self.context).aq_explicit
 
-        if IDexterityContent.providedBy(context):
-            behavior = ITagging(context, None)
-            if behavior:
-                self.tags = behavior.tags
-        else:
-            self.tags = getattr(context, 'tags', [])
+        behavior = ITagging(context, None)
+        if behavior:
+            self.tags = behavior.tags
 
         self.tag_root_url = getInterfaceRoot(context, ITagRoot).absolute_url()
