@@ -1,0 +1,24 @@
+<div class="portletWrapper" i18n:domain="ftw.tagging"
+     tal:define="tags view/tag_cloud">
+    <section class="portlet portletTagcloud clearfix">
+
+        <header class="portletHeader">
+            <span i18n:translate="label_tagcloud">
+                Tag Cloud
+            </span>
+        </header>
+
+        <section class="portletContent">
+            <ul>
+                <li tal:repeat="tag tags">
+                    <a tal:attributes="style string:font-size: ${tag/font_size}em;
+                                       href string:${view/tag_root_url}/@@objects_by_tag_view?tag=${tag/title}"
+                       tal:content="tag/title" />
+                </li>
+            </ul>
+        </section>
+
+    </section>
+
+</div>
+
