@@ -1,0 +1,10 @@
+<?xml version="1.0"?>
+<import-steps>
+    <import-step id="ftw.tagging.various"
+                 version="20090114-01"
+                 handler="ftw.tagging.setuphandlers.setupVarious"
+                 title="ftw.tagging: Miscellaneous setup steps">
+       <dependency step="skins" />
+       Various setup steps that are not handled by GS import/export handlers.
+   </import-step>
+</import-steps>
