@@ -1,0 +1,13 @@
+<?xml version="1.0"?>
+<object name="portal_skins" allow_any="False" cookie_persistence="False">
+
+    <object name="ftw.tagging"
+            meta_type="Filesystem Directory View"
+            directory="ftw.tagging:skins/ftw_tagging" />
+
+    <skin-path name="*">
+        <layer name="ftw.tagging"
+               insert-before="custom" />
+    </skin-path>
+
+</object>
