@@ -1,0 +1,4 @@
+<?xml version="1.0"?>
+<object name="portal_catalog" meta_type="Plone Catalog Tool">
+    <column value="tags" remove="True"/>
+</object>
