@@ -1,0 +1,11 @@
+<?xml version="1.0"?>
+<registry>
+
+    <records prefix="plone.resources/tagging_css"
+             interface="Products.CMFPlone.interfaces.IResourceRegistry"
+             remove="True"/>
+
+    <records prefix="plone.bundles/ftw-tagging-resources"
+             interface="Products.CMFPlone.interfaces.IBundleRegistry"
+             remove="True"/>
+</registry>
