@@ -5,7 +5,8 @@ Changelog
 1.2.1 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Drop archetypes support. [tinagerber]
+- Add Plone 5.1 support. [tinagerber]
 
 
 1.2.0 (2018-12-10)
